--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -3,3 +3,24 @@
     opacity: 0.5; 
     cursor: not-allowed;
   }
+
+  p {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+
+  .div_style {
+    position: relative;
+    border: 1px solid black;
+    width: 300px;
+    height: 50px;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .hidden {
+    display: none;
+    pointer-events: none;
+  }
