--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -37,13 +37,19 @@
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  border: 1px solid black;
+  background-color: #d4bc43;
+  padding: 10px;
+  border-radius: 10px;
+  /* margin-left: 50px; */
+  margin-right: 150px;
 }
 
 /* The actual popup */
 .popup .popuptext {
   visibility: hidden;
   width: 160px;
-  background-color: #555;
+  background-color: #d4bc43;
   color: #fff;
   text-align: center;
   border-radius: 6px;
