--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -32,6 +32,15 @@
   .project_section{
     padding-top: 80px;
   }
+
+  .cv{
+    border: 1px solid black;
+    border-radius: 15px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    padding: 10px;
+    background-color: rgb(222, 222, 222);
+  }
   /*////////////////////////////////////////////*/
   /*/////////// POP UP styles //////////////////*/
   /*////////////////////////////////////////////*/
