--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -38,7 +38,7 @@
     border-radius: 15px;
     margin-top: 50px;
     margin-bottom: 50px;
-    padding: 10px;
+    padding-top: 20px;
     background-color: rgb(222, 222, 222);
   }
 
@@ -72,7 +72,8 @@
   
   .closetext {
     color: red;
-    font-size: 25px;
+    font-size: 70px;
+    opacity: 0.3;
     position: absolute;
     top: 50%;
     left: 50%;
