--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;800&display=swap');
+body{
+  font-family: 'Open Sans', sans-serif;
+}
 .unclicable {
     pointer-events: none;
     opacity: 0.5; 
